--- a/package.json
+++ b/package.json
@@ -8,7 +8,7 @@
     "react": "^16.8.6",
     "react-countdown-now": "^2.1.1",
     "react-dom": "^16.8.6",
-    "react-scripts": "3.0.1",
+    "react-scripts": "^3.3.0",
     "react-scroll": "^1.7.14",
     "react-timeago": "^4.4.0",
     "styled-components": "^4.3.2"
